# CVBuild34

./: CVBuild34.sln
CVBuild34/: CVBuild34-Debug.vgdbsettings  CVBuild34-Release.vgdbsettings  CVBuild34.vcxproj  CVBuild34.vcxproj.filters
CodeDB/CVBuild34-Debug-Win32/: GlobalFileTable.000  GlobalFileTable.001  codedb.lck
CodeDB/CVBuild34-Debug-Win32.0002/: codedb.lck
CodeDB/OCVBBuild-Debug-Win32/: GlobalFileTable.000  GlobalFileTable.001
CodeDB/OCVBBuild-Debug-Win32.0001/: codedb.lck
CodeDB/OCVBuild.vgdbcmake-Debug/: GlobalFileTable.000  GlobalFileTable.001
CodeDB/OpenCVDemo-Debug-Win32/: GlobalFileTable.000  GlobalFileTable.001  OpenCVDemo-00001.rdb  OpenCVDemo.npd
CodeDB/OpenCVDemo-Debug-Win32.0001/: OpenCVDemo.npd  codedb.lck
CodeDB/OpenCVDemo-Debug-Win32.0002/: OpenCVDemo.npd  codedb.lck
CodeDB/OpenCVDemo2-Debug-Win32/: GlobalFileTable.000  GlobalFileTable.001  OpenCVDemo2.npd  codedb.lck
OCVBBuild/: OCVBBuild-Debug.vgdbsettings  OCVBBuild-Release.vgdbsettings  OCVBBuild.vcxproj  OCVBBuild.vcxproj.filters
OpenCVDemo/: CMakeLists.txt  CMakeLists.txt.old  OpenCVDemo-Debug.vgdbsettings  OpenCVDemo-Release.vgdbsettings  OpenCVDemo.cpp  OpenCVDemo.vcxproj  OpenCVDemo.vcxproj.filters  gcc_Debug.h
OpenCVDemo2/: CMakeLists.txt  CMakeLists.txt.old  OpenCVDemo2-Debug.vgdbsettings  OpenCVDemo2.cpp  OpenCVDemo2.vcxproj  OpenCVDemo2.vcxproj.filters
